spacing issue on turnkey page

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <!-- <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
-                    Awning
+                    Awnings
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -163,7 +163,7 @@
                 <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
-                    Fan
+                    Fans
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -175,7 +175,7 @@
                   <small>Cooling Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -194,7 +194,6 @@
             </div>
           </div>
         </li>
-
         <li>
           <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
         </li>
