added fans page and illustrations

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <small>Air-Intake Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="fan" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="fans" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
