--- a/voskcoin.html
+++ b/voskcoin.html
@@ -138,11 +138,11 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <!-- <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="awnings" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
-                    Awning
+                    Awnings
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -154,11 +154,11 @@
                   <small>Air-Intake Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="fan" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="fans" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
-                    Fan
+                    Fans
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -170,7 +170,7 @@
                   <small>Cooling Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
