fans page tweaks

--- a/fans.html
+++ b/fans.html
@@ -47,7 +47,7 @@
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
 
-  <title>Digital Shovel • i300 Minipod</title>
+  <title>Digital Shovel • Fans</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -296,49 +296,40 @@
       <div class="card-1 card__list flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
           <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
-          <h6>Power Input</h6>
+          <h6>Feature Title</h6>
         </div>
         <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">Input voltage provided at 415Y240</li>
-          <li class="card__list-item flex">380-415 Volts 5 Wire
-            (3 Poles, Neutral + Ground)</li>
-          <li class="card__list-item flex">220-240 Volts Primary to Neutral</li>
-          <li class="card__list-item card__list-item--new flex">208 Volt 3-Phase 3 Wire + Ground</li>
+          <li class="card__list-item flex">Feature description goes here</li>
+          <li class="card__list-item flex">Feature description goes here</li>
+          <li class="card__list-item flex">Feature description goes here</li>
         </ul>
       </div>
       <div class="card-2 card__list flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
-          <h6>Smart Power Distribution Unit (SPDU)</h6>
+          <img class="icon--md" src="images/icons/icon_assemble.svg" alt="Assemble Icon">
+          <h6>Easy-to-Assemble</h6>
         </div>
         <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">Each MINIPOD is equipped with two SPDUs</li>
-          <li class="card__list-item flex">96 (42 outlets on 208 Volt PDU) - C19 outlets with a 20A
-            dedicated
-            breaker
-            per outlet</li>
-          <li class="card__list-item flex">Allows max wattage while providing max protection</li>
-          <li class="card__list-item flex">Individual port monitoring and switching</li>
-          <li class="card__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied
-            to a common
-            overhead mounted busway</li>
+          <li class="card__list-item flex">Using our C19 outlet, power up your fan(s) quickly and easily</li>
+          <li class="card__list-item flex">Feature description goes here</li>
+          <li class="card__list-item flex">Feature description goes here</li>
         </ul>
       </div>
       <div class="card-5 card__list flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
           <img class="icon--md" src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
-          <h6>Mining Capacity</h6>
+          <h6>Feature Title</h6>
         </div>
         <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">8 shelves 85” wide and 11.7” tall</li>
-          <li class="card__list-item flex">Quick change back-sheets on a per-row basis</li>
-          <li class="card__list-item flex">Supports 88 S19 miners and 40 4U GPUs</li>
+          <li class="card__list-item flex">Feature description goes here</li>
+          <li class="card__list-item flex">Feature description goes here</li>
+          <li class="card__list-item flex">Feature description goes here</li>
         </ul>
       </div>
       <div class="card-7 card__data card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
-        <h6>Total Capacity</h6>
-        <h6 class="text--blue">300kW</h6>
+        <img class="icon--md" src="images/icons/icon_fan.svg" alt="Fan Icon">
+        <h6>Cubic Feet per Meter</h6>
+        <h6 class="text--blue">15,000</h6>
       </div>
       <a href="contact" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -352,7 +343,7 @@
       <div class="card-9 card__data flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue">$19,999 - $25,500</h6>
+        <h6 class="text--blue">$499 - $550</h6>
       </div>
     </section>
     <section id="bundle" class="bundle">
@@ -398,9 +389,9 @@
           <ul class="footer__list">
             <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-                <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
+            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
