major update, added fans & awnings

--- a/fans.html
+++ b/fans.html
@@ -110,7 +110,7 @@
 
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-              <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="M300" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -142,7 +142,7 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="awnings" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -226,17 +226,21 @@
           <h4>Cooling Solution</h4>
         </div>
         <h1 class="hero__heading">
-          <emphasis class="text--blue">FANS</emphasis>
+          15,000 CFM <emphasis class="text--blue">Fans</emphasis>
         </h1>
       </div>
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
-        <img class="hero__2d-i300" src="images/illustrations/fan_front.svg" alt="Fan Front Illustration">
+        <img class="hero__product-illustration" src="images/illustrations/fan_front.svg" alt="Fan Front Illustration">
         <div class="gallery-container">
           <div class="gallery gallery__i300">
             <img class="photo photo-1 photo__i300" src="images/photos/minipod/M300-back-1.jpg"
-              alt="Fans On The Minipod M300 Back View">
-            <img class="photo photo-2 photo__i300" src="images/photos/minipod/M300-back-2.jpg"
-              alt="Fans On The Minipod M300 Front View">
+              alt="Fans on the Minipod M300 Back View">
+            <img class="photo photo-2 photo__i300" src="images/photos/fans/fans-inside.png"
+              alt="Inside View of the Fans">
+            <img class="photo photo-3 photo__i300" src="images/photos/fans/fans-closed.png"
+              alt="Fan with Closed Louvers">
+            <img class="photo photo-4 photo__i300" src="images/photos/fans/fans-open.png"
+              alt="Fans with Open Louvers">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
@@ -343,7 +347,7 @@
       <div class="card-9 card__data flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue">$499 - $550</h6>
+        <h6 class="text--blue">$479</h6>
       </div>
     </section>
     <section id="bundle" class="bundle">
@@ -387,7 +391,7 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
             <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
