--- a/i300.html
+++ b/i300.html
@@ -110,7 +110,7 @@
 
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-              <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="M300" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -142,7 +142,7 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <!-- <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="awnings" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -225,7 +225,7 @@
       <div class="flex flex-col ai-c gap--sm">
         <div class="flex flex-col--sm-mobile ai-c gap--sm">
           <h4>Indoor Solution</h4>
-          <a href="m300" class="btn btn--switch">switch to outdoor
+          <a href="M300" class="btn btn--switch">switch to outdoor
             <svg class="switch-icon" width="23" height="22" viewBox="0 0 23 22" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -242,7 +242,7 @@
         </h1>
       </div>
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
-        <img class="hero__2d-i300" src="images/illustrations/i300.svg" alt="i300 Minipod Illustration">
+        <img class="hero__product-illustration" src="images/illustrations/i300.svg" alt="i300 Minipod Illustration">
         <div class="gallery-container">
           <div class="gallery gallery__i300">
             <img class="photo photo-1 photo__i300" src="images/photos/minipod/i300-back.jpg"
@@ -405,11 +405,11 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-                <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
+            <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
@@ -438,7 +438,6 @@
       </div>
     </div>
   </footer>
-
 
 </body>
 
