--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -109,7 +109,7 @@
 
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-              <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="M300" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -207,7 +207,7 @@
 
     <section class="flex flex-col gap--xlg">
       <div class="flex flex-col gap--sm">
-        <h1 class="hero__heading hero__heading--left">TURN-KEY SOLUTIONS</h1>
+        <h1 class="hero__heading hero__heading--left">Turn-Key Solutions</h1>
         <p class="hero__body">Our turn-key solutions are designed to make your life easier by providing a
           comprehensive and efficient
           solution to your business needs. From start to finish, we'll handle all the details, so you can focus on
@@ -322,6 +322,7 @@
         </h2>
       </div>
     </section>
+    
     <section class="turnkey__cta flex flex-col ai-c">
       <a class="btn btn--primary" href="contact">Get Started
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -349,11 +350,11 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-                <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
+            <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
@@ -382,7 +383,6 @@
       </div>
     </div>
   </footer>
-
 
 </body>
 
