--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-              <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="M300" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -143,7 +143,7 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="awnings" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -206,7 +206,7 @@
 
   <main class="main">
     <section class="hero container">
-      <h1 class="hero__heading hero__heading--sm-width">
+      <h1 class="hero__heading hero__heading--caps hero__heading--sm-width">
         <emphasis><span class="text-1">Revolutionary</span></emphasis> <br> <span class="text-2">crypto
           mining</span> <span class="text-3">containers</span>
       </h1>
@@ -222,7 +222,7 @@
               Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
               offering. </p>
             <div class="flex gap--sm">
-              <a class="btn btn--primary" href="m300">Products
+              <a class="btn btn--primary" href="M300">Products
                 <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.49 6L7.5 6" />
@@ -424,7 +424,7 @@
           alt="Minipod Illustration Back Side">
         <div class="minipod__illustrations--shadow"></div>
       </div>
-      <a href="m300" class="btn btn--primary btn--as-c">Minipod Info
+      <a href="M300" class="btn btn--primary btn--as-c">Minipod Info
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -451,7 +451,7 @@
               </span> that comes along with it. The SPDU and its user interface give you the power to control
               numerous
               pricing to customize your Minipod and miners.</p>
-            <a href="m300" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="M300" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -477,7 +477,7 @@
                 data</span> for you to monitor every event that
               occurs. Determine the time period you want to analyze and never miss anything.
             </p>
-            <a href="m300" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="M300" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -502,7 +502,7 @@
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
             </p>
-            <a href="m300" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="M300" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -788,7 +788,7 @@
           </p>
           <h2 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h2>
         </div>
-        <a href="m300" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
+        <a href="M300" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
           class="income__btn btn btn--primary">Get Started
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -814,11 +814,11 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-                <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
+            <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
@@ -847,7 +847,6 @@
       </div>
     </div>
   </footer>
-
 
 </body>
 
