--- a/pages/archived/merch.html
+++ b/pages/archived/merch.html
@@ -71,7 +71,7 @@
           </span>
           <ul class="dropdown__menu">
             <li>
-              <a class="dropdown__link" href="m300">
+              <a class="dropdown__link" href="M300">
                 <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>M300 Minipod
@@ -289,13 +289,13 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Minipod</a></li>
+            <li><a href="M300" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Products</a></li>
+            <li><a href="M300" class="footer__list-item">Products</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
