--- a/voskcoin.html
+++ b/voskcoin.html
@@ -106,7 +106,7 @@
 
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-              <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="M300" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -588,8 +588,7 @@
     <div class="container footer__container">
       <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-              alt="Digital Shovel Logo" /></a>
+          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low
             energy
@@ -599,11 +598,11 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-            <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
+            <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
