sixed scroll for more button

--- a/m300.html
+++ b/m300.html
@@ -494,7 +494,7 @@
       </div>
     </section>
 
-    <a class="scroll scroll__m300">
+    <a href="#specifications" class="scroll scroll__m300">
       <span class="scroll__text">scroll for more</span>
       <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
         xmlns="http://www.w3.org/2000/svg">
