--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       </div>
     </section>
 
-    <a class="scroll scroll__home">
+    <a href="#bundle" class="scroll scroll__home">
       <span class="scroll__text">scroll for more</span>
       <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
         xmlns="http://www.w3.org/2000/svg">
