fixed interview page icons

--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -240,38 +240,38 @@
 
     <section class="grid grid__col-6 mtop--xl">
       <div class="grid-item grid-interview__item-1">
-        <img src="images/icons/icon_research.svg" alt="Research Icon">
+        <img class="grid-item__icon" src="images/icons/icon_research.svg" alt="Research Icon">
         <h5>Learn More About Us</h5>
         <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare
           for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
       </div>
       <div class="grid-item grid-interview__item-2">
-        <img src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
+        <img class="grid-item__icon" src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
         <h5>Provide Elaborate Answers</h5>
         <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and
           experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
       </div>
       <div class="grid-item grid-interview__item-3">
-        <img src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
+        <img class="grid-item__icon" src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
         <h5>Use STAR Statements</h5>
         <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for
           Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements
           clearly and concisely.</p>
       </div>
       <div class="grid-item grid-interview__item-4">
-        <img src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
+        <img class="grid-item__icon" src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
         <h5>Professional Background</h5>
         <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied
           for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
       </div>
       <div class="grid-item grid-interview__item-5">
-        <img src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
+        <img class="grid-item__icon" src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
         <h5>Position Motivations</h5>
         <p>We want to know why you are interested in working with us. Being clear about your motivations will help you
           demonstrate your enthusiasm, fit and potential for the position.</p>
       </div>
       <div class="grid-item grid-interview__item-6">
-        <img src="images/icons/icon_suit.svg" alt="Business Suit Icon">
+        <img class="grid-item__icon" src="images/icons/icon_suit.svg" alt="Business Suit Icon">
         <h5>Dress Business Casual</h5>
         <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are
           neat and professional, but not too formal or stiff.</p>
