update gap in specs

--- a/nanopod.html
+++ b/nanopod.html
@@ -309,7 +309,7 @@
       </svg>
     </a>
     <section id="specifications" class="card__grid card__grid--i300">
-      <div class="flex flex-col gap--md">
+      <div class="flex flex-col gap--xlg">
         <div class="card-1 card__list flex flex-col gap--md">
           <div class="flex gap--sm ai-c">
             <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
