--- a/nanopod.html
+++ b/nanopod.html
@@ -143,7 +143,8 @@
                 </div>
               </a>
               <a class="dropdown__menu-item dropdown__link" href="nanopod" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_navbar_nanopod.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_nanopod.svg" alt="Minipod Icon"
+                  aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     NanoPOD
@@ -246,13 +247,14 @@
         </h1>
       </div>
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
-        <img class="hero__product-illustration" src="images/illustrations/nanopod_back.svg" alt="NanoPOD Back View Illustration">
+        <img class="hero__product-illustration" src="images/illustrations/nanopod_back.svg"
+          alt="NanoPOD Back View Illustration">
         <div class="gallery-container">
           <div class="gallery gallery__i300">
-            <img class="photo photo-1 photo__i300" src="images/photos/minipod/i300-back.jpg"
-              alt="i300 Minipod Back View">
-            <img class="photo photo-2 photo__i300" src="images/photos/minipod/i300-front.jpg"
-              alt="i300 Minipod Front View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_back.png" alt="NanoPOD Back View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_side.png" alt="NanoPOD Side View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_open-door.png" alt="NanoPOD Side View with Open Door">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_inside.png" alt="NanoPOD Inside View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
@@ -309,7 +311,7 @@
       </svg>
     </a>
     <section id="specifications" class="card__grid card__grid--i300">
-      <div class="flex flex-col gap--xlg">
+      <div class="card__combined flex flex-col">
         <div class="card-1 card__list flex flex-col gap--md">
           <div class="flex gap--sm ai-c">
             <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
