--- a/i300.html
+++ b/i300.html
@@ -142,6 +142,23 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
+              <a class="dropdown__menu-item dropdown__link" href="nanopod" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_nanopod.svg" alt="Minipod Icon"
+                  aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    NanoPOD
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Indoor/Outdoor Solution</small>
+                </div>
+              </a>
               <a class="dropdown__menu-item dropdown__link" href="awnings" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
