--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -135,6 +135,23 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
+              <a class="dropdown__menu-item dropdown__link" href="nanopod" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_nanopod.svg" alt="Minipod Icon"
+                  aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    NanoPOD
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Indoor/Outdoor Solution</small>
+                </div>
+              </a>
               <a class="dropdown__menu-item dropdown__link" href="awnings" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
@@ -168,25 +185,24 @@
                 </div>
               </a>
               <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
-                <div class="dropdown__text">
-                  <h5>
-                    SmartPDU
-                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                    </svg>
-                  </h5>
-                  <small>Automation & Monitor</small>
-                </div>
-              </a> -->
+                    <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
+                    <div class="dropdown__text">
+                      <h5>
+                        SmartPDU
+                        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        </svg>
+                      </h5>
+                      <small>Automation & Monitor</small>
+                    </div>
+                  </a> -->
             </div>
           </div>
         </li>
-
         <li>
           <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
         </li>
