updated footer for all pages

--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -312,6 +312,7 @@
           <ul class="footer__list">
             <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+            <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
             <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
             <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
