--- a/fans.html
+++ b/fans.html
@@ -399,8 +399,7 @@
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
-            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile
-            units. With low
+            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low
             energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
           </p>
@@ -410,6 +409,7 @@
           <ul class="footer__list">
             <li><a href="M300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+            <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
             <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
             <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
