page title change

--- a/giveaway.html
+++ b/giveaway.html
@@ -46,7 +46,7 @@
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/detect-location.js"></script>
 
-  <title>Digital Shovel • PDU Giveaway</title>
+  <title>Digital Shovel • SmartPDU Giveaway</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
