--- a/giveaway.html
+++ b/giveaway.html
@@ -222,10 +222,10 @@
   <main class="main">
     <section class="container flex flex-col--lg-tablet jc-sb gap--md">
       <div class="flex flex-col gap--lg">
-        <h1 class="hero__heading">SmartPDU <emphasis class="text--blue">Giveaway</emphasis>
+        <h1 class="hero__heading">Blockchain <emphasis class="text--blue">Futurist</emphasis>
         </h1>
         <div class="flex flex-col gap--sm">
-          <h2 class="hero__subheading">Fill the form below with your details</h2>
+          <h2 class="hero__subheading">Fill the form below to enter the SmartPDU giveaway</h2>
           <p class="hero__body hero__body--team">
             Show us the "Thank you!" page after you submit your details and you will receive <strong>FREE</strong> Digital Shovel swag and a chance to win a <strong>FREE</strong> SmartPDU valued at $2500!
           </p>
