--- a/giveaway.html
+++ b/giveaway.html
@@ -236,7 +236,7 @@
       </div>
     </section>
     <section class="form container">
-      <form action="https://formspree.io/f/xbjbjwdz" method="POST" autocomplete="on" enctype="multipart/form-data">
+      <form action="https://formspree.io/f/myyqewnw" method="POST" autocomplete="on" enctype="multipart/form-data">
         <div class="fieldset fieldset__3-col flex flex-col">
           <label class="fieldset__label" for="Full-Name">Full Name</label>
           <input class="fieldset__text" aria-label="Enter your full name" type="text" id="input-full-name"
