--- a/thanks-giveaway.html
+++ b/thanks-giveaway.html
@@ -224,7 +224,7 @@
         <div class="flex flex-col gap--sm">
           <h3>We have received your details!</h3>
           <p class="hero__body hero__body--team">
-            Show our team this message to receive your FREE Digital Shovel swag. We will contact you if you also are the lucky winner of a FREE Digital Shovel SmartPDU!
+            Show our team this message to receive your FREE Digital Shovel swag. We will contact you if you are also the lucky winner of a FREE Digital Shovel SmartPDU!
           </p>
         </div>
       </div>
