fixed subnav links and added ds X bfc

--- a/giveaway.html
+++ b/giveaway.html
@@ -224,16 +224,17 @@
       <div class="flex flex-col gap--lg">
         <h1 class="hero__heading">Blockchain <emphasis class="text--blue">Futurist</emphasis>
         </h1>
+        <img class="hero__company" src="images/illustrations/ds-x-bfc.png"
+          alt="Digital Shovel X Blockchain Futurist Conference">
         <div class="flex flex-col gap--sm">
           <h2 class="hero__subheading">Fill the form below to enter the SmartPDU giveaway</h2>
           <p class="hero__body hero__body--team">
-            Show us the "Thank you!" page after you submit your details and you will receive <strong>FREE</strong> Digital Shovel swag and a chance to win a <strong>FREE</strong> SmartPDU valued at $2500!
+            Show us the "Thank you!" page after you submit your details and you will receive <strong>FREE</strong>
+            Digital Shovel swag and a chance to win a <strong>FREE</strong> SmartPDU valued at $2500!
           </p>
         </div>
       </div>
-      <div class="hero__img">
-        <img src="images/illustrations/spdu-giftbox_v2.png" alt="SmartPDU Giftbox Illustration">
-      </div>
+      <img class="hero__img" src="images/illustrations/spdu-giftbox_v2.png" alt="SmartPDU Giftbox Illustration">
     </section>
     <section class="form container">
       <form action="https://formspree.io/f/myyqewnw" method="POST" autocomplete="on" enctype="multipart/form-data">
@@ -255,9 +256,10 @@
         <div class="fieldset fieldset__6-col flex flex-col">
           <label class="fieldset__label">Purpose of Contact</label>
           <div class="flex">
-            <input type="radio" aria-label="SmartPDU Giveaway" name="Purpose-of-Contact" id="SmartPDU Giveaway" value="SmartPDU Giveaway"
-              required="required">
-            <label class="fieldset__radio fieldset__radio--add-bl-radius fieldset__radio--add-bottom-radius" for="SmartPDU Giveaway">SmartPDU Giveaway</label>
+            <input type="radio" aria-label="SmartPDU Giveaway" name="Purpose-of-Contact" id="SmartPDU Giveaway"
+              value="SmartPDU Giveaway" required="required">
+            <label class="fieldset__radio fieldset__radio--add-bl-radius fieldset__radio--add-bottom-radius"
+              for="SmartPDU Giveaway">SmartPDU Giveaway</label>
           </div>
         </div>
         <input type="hidden" name="_next" value="https://digitalshovel.com/thanks">
