--- a/i300.html
+++ b/i300.html
@@ -45,6 +45,7 @@
   <script defer src="/app/js/detect-scroll-i300.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/subnav.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
 
   <title>Digital Shovel • i300 Minipod</title>
