--- a/m300.html
+++ b/m300.html
@@ -39,7 +39,6 @@
   <!-- GSAP -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script defer src="/app/js/ScrollTrigger.min.js"></script>
-  <script defer src="/app/js/ScrollSmoother.min.js"></script>
 
   <!-- Javascript -->
   <script defer src="/app/js/detect-scroll-m300.js"></script>
@@ -48,7 +47,7 @@
   <script defer src="/app/js/bear-market-promo.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
   <script defer src="/app/js/home.js"></script>
-  <script defer src="/app/js/scroll-animations-m300.js"></script>
+  <script defer src="/app/js/subnav.js"></script>
 
   <title>Digital Shovel • M300 Minipod</title>
 
