added subnav functionality to nanopod

--- a/nanopod.html
+++ b/nanopod.html
@@ -46,6 +46,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
+  <script defer src="/app/js/subnav"></script>
 
   <title>Digital Shovel • NanoPOD</title>
 
