responsive fixes for forms and giveaway page

--- a/contact.html
+++ b/contact.html
@@ -220,7 +220,7 @@
   </nav>
 
   <main class="main">
-    <section class="container flex flex-col--lg-tablet jc-sb gap--md">
+    <section class="container flex flex-col--lg-tablet ai-c--tablet jc-sb gap--md">
       <div class="flex flex-col gap--lg">
         <h1 class="hero__heading">Contact <emphasis class="text--blue">Sales</emphasis>
         </h1>
