--- a/giveaway.html
+++ b/giveaway.html
@@ -220,8 +220,8 @@
   </nav>
 
   <main class="main">
-    <section class="container flex flex-col--lg-tablet jc-sb gap--md">
-      <div class="flex flex-col gap--lg">
+    <section class="container flex flex-col--lg-tablet jc-sb gap--md ai-c--tablet">
+      <div class="flex flex-col gap--lg ai-c--tablet">
         <h1 class="hero__heading">Blockchain <emphasis class="text--blue">Futurist</emphasis>
         </h1>
         <img class="hero__company" src="images/illustrations/ds-x-bfc.png"
