--- a/thanks-giveaway.html
+++ b/thanks-giveaway.html
@@ -217,11 +217,11 @@
   <main class="main">
 
     <section class="hero container flex jc-sb">
-      <div class="hero__text flex flex-col gap--lg">
+      <div class="hero__text flex flex-col gap--lg ai-c--tablet">
         <h1>
           Thank <emphasis class="text--blue">you!</emphasis>
         </h1>
-        <div class="flex flex-col gap--sm">
+        <div class="flex flex-col gap--sm ai-c--tablet">
           <h3>We have received your details!</h3>
           <p class="hero__body hero__body--team">
             Show our team this message to receive your FREE Digital Shovel swag. We will contact you if you are the lucky winner of a FREE Digital Shovel SmartPDU!
